--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="club_red">#CC0000</color>
+    <color name="brick_red">#E52b50</color>
+    <color name="persian_blue">#11518a</color>
 </resources>
