changed the RecyclerView for look better, readed the documentation of RecyclerView for using it to display the information retrieved from the database

--- a/app/src/main/res/layout/activity_drink.xml
+++ b/app/src/main/res/layout/activity_drink.xml
@@ -8,6 +8,7 @@
     tools:context=".activities.DrinkActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/searchView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/drinkRecyclerView"/>
@@ -15,14 +16,16 @@
     <Spinner
         android:id="@+id/dropDownMenu"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="1dp"
+        android:tooltipText="Filters"
         android:spinnerMode="dropdown" />
 
     <SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="20dp" />
+        android:layout_height="40dp" />
 
 
 </RelativeLayout>
