--- a/app/src/main/res/layout/drink_view.xml
+++ b/app/src/main/res/layout/drink_view.xml
@@ -1,56 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="30dp">
-
-    <TextView
-        android:id="@+id/drinkName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/drinkImageView"
-        android:text="@string/drink_view_drink_name"
-        android:textColor="@color/white"
-        android:textSize="30dp" />
+    android:layout_height="105dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/drinkImageView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginRight="10dp" />
+        android:id="@+id/drinkImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/drinkName"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="7dp"
+        app:srcCompat="@drawable/spritz" />
 
     <TextView
-        android:id="@+id/drinkRecipe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/drinkFlavour"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="0dp"
-        android:layout_toEndOf="@id/drinkImageView"
-        android:text="@string/drink_view_recipe"
+        android:layout_width="200dp"
+        android:id="@+id/drinkName"
+        android:textSize="16sp"
+        android:layout_marginStart="20dp"
+        android:text="Spritz"
         android:textColor="@color/black"
-        android:textSize="15dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_below="@id/drinkImageView"
-        android:layout_marginTop="34dp"
-        android:background="#8C7878" />
+        android:layout_marginEnd="20dp"
+        android:maxLines="1"
+        android:layout_marginTop="15dp"
+        android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/drinkFlavour"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/drinkDescription"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="acqua sale limone"
         android:layout_below="@id/drinkName"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_toEndOf="@id/drinkImageView"
-        android:text="@string/drink_view_flavour"
-        android:textColor="@color/black"
-        android:textSize="20dp" />
+        android:layout_marginLeft="10sp"
+        android:layout_marginTop="10sp"
 
+        android:layout_toEndOf="@id/drinkImage" />
 
 </RelativeLayout>
