--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="brick_red">#E52b50</color>
     <color name="persian_blue">#11518a</color>
+    <color name="orange">#ff9401</color>
 </resources>
