--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,7 +66,7 @@
         app:layout_constraintVertical_bias="0.201" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/submitRegistrationWithUsernameAndPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -85,7 +85,9 @@
         android:background="@color/persian_blue"
         android:text="@string/register_activity_fingerprint_button"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="578dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registerTextFingerprint" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
