--- a/app/src/main/res/layout/drink_view.xml
+++ b/app/src/main/res/layout/drink_view.xml
@@ -1,39 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="105dp"
+    android:layout_height="220dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/drinkImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_below="@+id/drinkName"
         android:layout_marginStart="20dp"
         android:layout_marginTop="7dp"
         app:srcCompat="@drawable/spritz" />
 
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:id="@+id/drinkName"
-        android:textSize="16sp"
+        android:textSize="35sp"
         android:layout_marginStart="20dp"
-        android:text="Spritz"
-        android:textColor="@color/black"
+        android:text=""
+        android:textColor="@color/white"
         android:layout_marginEnd="20dp"
         android:maxLines="1"
         android:layout_marginTop="15dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="50dp"/>
 
     <TextView
         android:id="@+id/drinkDescription"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:text="acqua sale limone"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:text=""
+        android:textColor="@color/white"
+        android:textSize="15sp"
         android:layout_below="@id/drinkName"
         android:layout_marginLeft="10sp"
         android:layout_marginTop="10sp"
-
         android:layout_toEndOf="@id/drinkImage" />
+
+    <TextView
+        android:id="@+id/drinkPrice"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/drinkDescription"
+        android:layout_toRightOf="@id/drinkImage"
+        android:layout_marginTop="10sp"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:text=""
+        android:textColor="@color/white" />
+
 
 </RelativeLayout>
