--- a/app/src/main/res/layout/activity_order_summary.xml
+++ b/app/src/main/res/layout/activity_order_summary.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textViewOrderSummary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90sp"
+        android:layout_marginStart="90sp"
         android:fontFamily="@font/calistoga"
         android:text="@string/order_summary_activity_order_summary"
         android:textColor="@color/white"
@@ -36,7 +36,7 @@
 
     <TextView
         android:id="@+id/textViewCreditCardPassword"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_above="@id/editTextCreditCardPassword"
         android:text="@string/order_summary_activity_text_view_credit_card_password"
@@ -44,12 +44,36 @@
         android:textAlignment="center"
         android:textColor="@color/white"/>
 
+    <TextView
+        android:id="@+id/finalTotal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_toEndOf="@id/textViewCreditCardPassword"
+        android:layout_below="@id/recyclerViewOrderSummary"
+        android:text="TOT:"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:id="@+id/totalCounter"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_toEndOf="@id/textViewCreditCardPassword"
+        android:layout_below="@id/finalTotal"
+        android:text="50"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:textAlignment="center"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/paymentButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         app:srcCompat="@drawable/dollaricon"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="30sp"
         android:layout_below="@id/textViewCreditCardPassword"
-        android:layout_toRightOf="@id/editTextCreditCardPassword"/>
+        android:layout_toEndOf="@id/editTextCreditCardPassword"/>
 </RelativeLayout>
