--- a/app/src/main/res/layout/drink_view.xml
+++ b/app/src/main/res/layout/drink_view.xml
@@ -11,11 +11,12 @@
         android:layout_below="@+id/drinkName"
         android:layout_marginStart="20dp"
         android:layout_marginTop="7dp"
-        app:srcCompat="@drawable/spritz" />
+        app:srcCompat="@drawable/spritz"
+        android:contentDescription="@string/image_of_the_drink" />
 
     <TextView
-        android:layout_width="match_parent"
         android:id="@+id/drinkName"
+        android:layout_width="match_parent"
         android:textSize="35sp"
         android:layout_marginStart="20dp"
         android:text=""
@@ -33,21 +34,47 @@
         android:textColor="@color/white"
         android:textSize="15sp"
         android:layout_below="@id/drinkName"
-        android:layout_marginLeft="10sp"
+        android:layout_marginStart="10sp"
         android:layout_marginTop="10sp"
         android:layout_toEndOf="@id/drinkImage" />
 
     <TextView
         android:id="@+id/drinkPrice"
-        android:layout_width="match_parent"
+        android:layout_width="70dp"
         android:layout_height="match_parent"
         android:layout_below="@id/drinkDescription"
-        android:layout_toRightOf="@id/drinkImage"
+        android:layout_toEndOf="@id/drinkImage"
         android:layout_marginTop="10sp"
         android:textAlignment="center"
         android:textSize="30sp"
         android:text=""
         android:textColor="@color/white" />
+
+
+    <Button
+        android:id="@+id/minusDrinkButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/round_button"
+        android:layout_toEndOf="@id/drinkPrice"
+        android:layout_below="@id/drinkDescription"
+        android:layout_marginTop="10dp"/>
+
+    <Button
+        android:id="@+id/plusDrinkButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/blackcross"
+        android:layout_toEndOf="@id/drinkQuantity"
+        android:layout_below="@id/drinkDescription"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/drinkQuantity"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:layout_toEndOf="@+id/minusDrinkButton"
+        android:layout_below="@id/drinkDescription" />
 
 
 </RelativeLayout>
