--- a/app/src/main/res/layout/drink_view_carrello.xml
+++ b/app/src/main/res/layout/drink_view_carrello.xml
@@ -18,7 +18,7 @@
         android:id="@+id/drinkDescriptionOrderSummary"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_toRightOf="@id/drinkImageOrderSummary"
+        android:layout_toEndOf="@id/drinkImageOrderSummary"
         android:text="descrizione del drink"
         android:textColor="@color/white"
         android:textSize="15sp"
@@ -28,35 +28,55 @@
         android:id="@+id/total"
         android:layout_width="70dp"
         android:layout_height="40dp"
-        android:layout_toEndOf="@id/drinkQuantityOrderSummary"
+        android:layout_toEndOf="@id/plusDrinkOrderSummaryButton"
         android:layout_below="@id/drinkDescriptionOrderSummary"
+        android:layout_marginStart="20dp"
         android:textSize="30sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:text="TOT:" />
 
     <TextView
         android:id="@+id/totalPriceOrderSummary"
         android:text="8$"
-        android:textSize="30sp"
-        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textColor="@color/black"
         android:textAlignment="center"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_toEndOf="@id/total"
         android:layout_below="@id/drinkDescriptionOrderSummary" />
 
 
-    <TextView
+    <EditText
         android:id="@+id/drinkQuantityOrderSummary"
-        android:layout_width="100dp"
+        android:layout_width="70dp"
         android:layout_height="40dp"
         android:layout_below="@id/drinkDescriptionOrderSummary"
-        android:layout_toRightOf="@id/drinkImageOrderSummary"
+        android:layout_toEndOf="@id/minusDrinkOrderSummaryButton"
+        android:layout_marginTop="10dp"
         android:text="42"
-        android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textAlignment="center"/>
 
+    <Button
+        android:id="@+id/plusDrinkOrderSummaryButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/blackcross"
+        android:layout_toEndOf="@id/drinkQuantityOrderSummary"
+        android:layout_below="@id/drinkDescriptionOrderSummary"
+        android:layout_marginTop="10dp"/>
+
+    <Button
+        android:id="@+id/minusDrinkOrderSummaryButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/blackminus"
+        android:layout_toEndOf="@id/drinkImageOrderSummary"
+        android:layout_below="@id/drinkDescriptionOrderSummary"
+        android:layout_marginTop="10dp"/>
 
     <ImageView
         android:id="@+id/drinkImageOrderSummary"
