--- a/app/src/main/res/layout/drink_view.xml
+++ b/app/src/main/res/layout/drink_view.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/drinkImage"
+        android:id="@+id/immagineDrinkCarrello"
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:layout_below="@+id/drinkName"
@@ -27,7 +27,7 @@
         android:layout_height="50dp"/>
 
     <TextView
-        android:id="@+id/drinkDescription"
+        android:id="@+id/descrizioneDrinkCarrello"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:text=""
@@ -36,14 +36,14 @@
         android:layout_below="@id/drinkName"
         android:layout_marginStart="10sp"
         android:layout_marginTop="10sp"
-        android:layout_toEndOf="@id/drinkImage" />
+        android:layout_toEndOf="@id/immagineDrinkCarrello" />
 
     <TextView
-        android:id="@+id/drinkPrice"
+        android:id="@+id/prezzoDrinkCarrello"
         android:layout_width="70dp"
         android:layout_height="match_parent"
-        android:layout_below="@id/drinkDescription"
-        android:layout_toEndOf="@id/drinkImage"
+        android:layout_below="@id/descrizioneDrinkCarrello"
+        android:layout_toEndOf="@id/immagineDrinkCarrello"
         android:layout_marginTop="10sp"
         android:textAlignment="center"
         android:textSize="30sp"
@@ -52,29 +52,29 @@
 
 
     <Button
-        android:id="@+id/minusDrinkButton"
+        android:id="@+id/bottoneMenoCarrello"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@drawable/blackminus"
-        android:layout_toEndOf="@id/drinkPrice"
-        android:layout_below="@id/drinkDescription"
+        android:layout_toEndOf="@id/prezzoDrinkCarrello"
+        android:layout_below="@id/descrizioneDrinkCarrello"
         android:layout_marginTop="10dp"/>
 
     <Button
-        android:id="@+id/plusDrinkButton"
+        android:id="@+id/bottonePiuCarrello"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@drawable/blackcross"
-        android:layout_toEndOf="@id/drinkQuantity"
-        android:layout_below="@id/drinkDescription"
+        android:layout_toEndOf="@id/quantitaDrink"
+        android:layout_below="@id/descrizioneDrinkCarrello"
         android:layout_marginTop="10dp"/>
 
     <EditText
-        android:id="@+id/drinkQuantity"
+        android:id="@+id/quantitaDrink"
         android:layout_width="100dp"
         android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/minusDrinkButton"
-        android:layout_below="@id/drinkDescription"
+        android:layout_toEndOf="@+id/bottoneMenoCarrello"
+        android:layout_below="@id/descrizioneDrinkCarrello"
         android:textAlignment="center"
         android:inputType="number"/>
 
