--- a/app/src/main/res/layout/drink_view_carrello.xml
+++ b/app/src/main/res/layout/drink_view_carrello.xml
@@ -1,88 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    android:layout_height="220dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ImageView
+        android:id="@+id/immagineDrinkCarrello"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_below="@+id/nomeDrinkCarrello"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="7dp"
+        app:srcCompat="@drawable/spritz"
+        android:contentDescription="@string/image_of_the_drink" />
 
     <TextView
-        android:id="@+id/drinkNameOrderSummary"
+        android:id="@+id/nomeDrinkCarrello"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:textSize="35sp"
-        android:text="nome del drink"
+        android:layout_marginStart="20dp"
+        android:text=""
         android:textColor="@color/white"
-        android:textAlignment="center" />
+        android:layout_marginEnd="20dp"
+        android:maxLines="1"
+        android:layout_marginTop="15dp"
+        android:layout_height="50dp"/>
 
     <TextView
-        android:id="@+id/drinkDescriptionOrderSummary"
+        android:id="@+id/descrizioneDrinkCarrello"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_toEndOf="@id/drinkImageOrderSummary"
-        android:text="descrizione del drink"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:layout_below="@id/drinkNameOrderSummary" />
+        android:layout_below="@id/nomeDrinkCarrello"
+        android:layout_marginStart="10sp"
+        android:layout_marginTop="10sp"
+        android:layout_toEndOf="@id/immagineDrinkCarrello" />
 
     <TextView
-        android:id="@+id/total"
+        android:id="@+id/prezzoDrinkCarrello"
         android:layout_width="70dp"
-        android:layout_height="40dp"
-        android:layout_toEndOf="@id/plusDrinkOrderSummaryButton"
-        android:layout_below="@id/drinkDescriptionOrderSummary"
-        android:layout_marginStart="20dp"
-        android:textSize="30sp"
-        android:textColor="@color/black"
-        android:text="TOT:" />
-
-    <TextView
-        android:id="@+id/totalPriceOrderSummary"
-        android:text="8$"
-        android:textSize="20sp"
-        android:textColor="@color/black"
+        android:layout_height="match_parent"
+        android:layout_below="@id/descrizioneDrinkCarrello"
+        android:layout_toEndOf="@id/immagineDrinkCarrello"
+        android:layout_marginTop="10sp"
         android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_toEndOf="@id/total"
-        android:layout_below="@id/drinkDescriptionOrderSummary" />
+        android:textSize="30sp"
+        android:text=""
+        android:textColor="@color/white" />
 
-
-    <EditText
-        android:id="@+id/drinkQuantityOrderSummary"
-        android:layout_width="70dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/drinkDescriptionOrderSummary"
-        android:layout_toEndOf="@id/minusDrinkOrderSummaryButton"
-        android:layout_marginTop="10dp"
-        android:text="42"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textAlignment="center"/>
 
     <Button
-        android:id="@+id/plusDrinkOrderSummaryButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/blackcross"
-        android:layout_toEndOf="@id/drinkQuantityOrderSummary"
-        android:layout_below="@id/drinkDescriptionOrderSummary"
-        android:layout_marginTop="10dp"/>
-
-    <Button
-        android:id="@+id/minusDrinkOrderSummaryButton"
+        android:id="@+id/bottoneMenoCarrello"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@drawable/blackminus"
-        android:layout_toEndOf="@id/drinkImageOrderSummary"
-        android:layout_below="@id/drinkDescriptionOrderSummary"
+        android:layout_toEndOf="@id/prezzoDrinkCarrello"
+        android:layout_below="@id/descrizioneDrinkCarrello"
         android:layout_marginTop="10dp"/>
 
-    <ImageView
-        android:id="@+id/drinkImageOrderSummary"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_below="@id/drinkNameOrderSummary"
-        android:src="@drawable/spritz"/>
+    <Button
+        android:id="@+id/bottonePiuCarrello"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/blackcross"
+        android:layout_toEndOf="@id/quantitaDrink"
+        android:layout_below="@id/descrizioneDrinkCarrello"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/quantitaDrink"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:layout_toEndOf="@+id/bottoneMenoCarrello"
+        android:layout_below="@id/descrizioneDrinkCarrello"
+        android:textAlignment="center"
+        android:inputType="number"/>
+
 
 </RelativeLayout>
