--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="brick_red">#E52b50</color>
     <color name="persian_blue">#11518a</color>
     <color name="orange">#ff9401</color>
+    <color name="sky_blue">#33ccff</color>
 </resources>
