--- a/app/src/main/res/layout/activity_carrello.xml
+++ b/app/src/main/res/layout/activity_carrello.xml
@@ -19,61 +19,45 @@
         android:textSize="30sp" />
 
 
-    <EditText
-        android:id="@+id/editTextCreditCardPassword"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="1dp"
-        android:layout_alignParentBottom="true"
-        android:inputType="textPassword" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewOrderSummary"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/textViewCreditCardPassword"
-        android:layout_below="@id/textViewOrderSummary" />
-
-    <TextView
-        android:id="@+id/textViewCreditCardPassword"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:layout_above="@id/editTextCreditCardPassword"
-        android:text="@string/order_summary_activity_text_view_credit_card_password"
-        android:textSize="28sp"
-        android:textAlignment="center"
-        android:textColor="@color/white"/>
+        android:layout_height="570dp"
+        android:layout_below="@id/textViewOrderSummary"
+        android:layout_above="@id/paymentButton"/>
 
     <TextView
         android:id="@+id/finalTotal"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_toEndOf="@id/textViewCreditCardPassword"
-        android:layout_below="@id/recyclerViewOrderSummary"
         android:text="TOT:"
         android:textColor="@color/white"
         android:textSize="30sp"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"/>
 
     <TextView
         android:id="@+id/totalCounter"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_toEndOf="@id/textViewCreditCardPassword"
-        android:layout_below="@id/finalTotal"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/finalTotal"
         android:text="50"
         android:textColor="@color/white"
         android:textSize="40sp"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:layout_marginBottom="2sp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/paymentButton"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:clickable="true"
         app:srcCompat="@drawable/dollaricon"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="30sp"
-        android:layout_below="@id/textViewCreditCardPassword"
-        android:layout_toEndOf="@id/editTextCreditCardPassword"/>
+        android:layout_alignParentBottom="true"
+        android:contentDescription="@string/payment_button"
+        android:layout_alignParentRight="true" />
+
 </RelativeLayout>
