--- a/app/src/main/res/layout/activity_carrello.xml
+++ b/app/src/main/res/layout/activity_carrello.xml
@@ -19,14 +19,13 @@
         android:textSize="30sp" />
 
 
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewOrderSummary"
         android:layout_width="match_parent"
         android:layout_height="570dp"
         android:layout_below="@id/textViewOrderSummary"
         android:layout_above="@id/paymentButton"/>
+
 
     <TextView
         android:id="@+id/finalTotal"
@@ -37,6 +36,7 @@
         android:textSize="30sp"
         android:textAlignment="center"
         android:layout_alignParentBottom="true"/>
+
 
     <TextView
         android:id="@+id/totalCounter"
@@ -50,14 +50,15 @@
         android:textAlignment="center"
         android:layout_marginBottom="2sp"/>
 
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/paymentButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:srcCompat="@drawable/dollaricon"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:clickable="true"
         android:contentDescription="@string/payment_button"
-        android:layout_alignParentRight="true" />
+        app:srcCompat="@drawable/dollaricon" />
 
 </RelativeLayout>
